--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,3 @@
-body {background-color:#f2f2f2;}
+body {background-color:#f2f2f2;font-family:Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;color:#333;}
+h1 {font-size:34px;line-height:38px;margin:0;}
+.block {width:25%;background-color:#FFF;box-shadow: 0 0px 10px 1px rgba(0, 0, 0, 0.15);padding:25px;}
